Closed Bug 235595 Opened 22 years ago Closed 22 years ago

nsXPLookAndFeel.cpp Warning: String literal converted to char* in initialization.

Categories

(Core :: XUL, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

88: Warning: String literal converted to char* in initialization. "/export/home/timeless/mozilla/widget/src/xpwidgets/nsXPLookAndFeel.cpp", line 190: Warning: String literal converted to char* in initialization. once for each line.
Attachment #142254 - Flags: superreview?(roc)
Attachment #142254 - Flags: review?(roc)
Attachment #142254 - Flags: superreview?(roc)
Attachment #142254 - Flags: superreview+
Attachment #142254 - Flags: review?(roc)
Attachment #142254 - Flags: review+
mozilla/widget/src/xpwidgets/nsXPLookAndFeel.cpp 1.38 mozilla/widget/src/xpwidgets/nsXPLookAndFeel.h 1.9
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: