Bug 235595 nsXPLookAndFeel.cpp Warning: String literal converted to char* in initialization. r=roc sr=roc