widget/src/xpwidgets/nsXPLookAndFeel.h
@@ -117,7 +117,10 @@ protected:
   static PRBool sInitialized;
   static nsLookAndFeelIntPref sIntPrefs[];
   static nsLookAndFeelFloatPref sFloatPrefs[];
-  static char* sColorPrefs[];
+  /* this length must not be shorter than the length of the longest string in the array
+   * see nsXPLookAndFeel.cpp
+   */
+  static const char sColorPrefs[][36];
   static PRInt32 sCachedColors[nsILookAndFeel::eColor_LAST_COLOR];
   static PRInt32 sCachedColorBits[COLOR_CACHE_SIZE];
 
